<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity.ForgotPassSucessClass">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"

            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/forgot_password_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_update"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                />

            <ImageView
                android:id="@+id/logo_image2"
                android:layout_width="230dp"
                android:layout_height="157dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pass_update" />
            <TextView
                android:id="@+id/slogan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_update"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"

                />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/sent_forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        />


</LinearLayout>