<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity.ForgotPassClass">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/general_back_icon"
            />

        <ImageView
            android:id="@+id/logo_image2"
            android:layout_width="163dp"
            android:layout_height="117dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_icon" />

        <TextView
            android:id="@+id/forgot_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpass"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotreset"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorTransparentWhite"

            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <com.hbb20.CountryCodePicker
            android:id="@+id/forgot_country_code_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/purple_border"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_country_code_picker"
            android:hint="@string/phone"
            android:layout_marginTop="3dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/colorPrimary"
            app:hintTextColor="@color/colorPrimary"
            app:startIconDrawable="@drawable/phone_icon"
            app:startIconTint="@color/colorPrimary">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />


        </com.google.android.material.textfield.TextInputLayout>




    </RelativeLayout>

    <Button
        android:id="@+id/sent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/forgotemail"
        android:onClick="ForgotUser"
        android:textColor="@color/colorAccent"

        />


</LinearLayout>